--- a/style.css
+++ b/style.css
@@ -3,19 +3,29 @@ body {
     margin: 0;
 }
 
+
+
 h1 {
     font-size: 50px;
+}
+.exp{
+    margin-bottom: 0;
+}
+h2 {
+    font-size: 40px;
 }
 
 .orange-color {
     color: orange
 }
 
-section {
+.flexible-container {
     display: flex;
     padding-top: 100px;
 }
-
+.experience{
+    padding-top: 25px;
+}
 .half-width {
     width: 50%;
     padding-left: 2%;
@@ -38,9 +48,41 @@ section {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
-.dream-big{
+
+.dream-big {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
-    background-position: right;
-    
+    background-position: right 0 bottom 0;
+}
+.baby-paragraph {
+    padding-right: 100px;
+}
+.experience-container {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left 0 bottom;
+}
+
+#ex-1 {
+    border-left: 7px solid orange;
+}
+
+#ex-2 {
+    border-left: 7px solid blue;
+}
+.ec{
+    margin-right: 98px;
+}
+footer p{
+    text-align: center;
+    margin-top:60px;
 }
