--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@ body {
     margin: 0;
 }
 
-
-
 h1 {
     font-size: 50px;
 }
@@ -69,7 +67,7 @@ h2 {
     margin-right: 5%;
     padding-left: 20px;
     box-shadow: 10px 10px 40px gray;
-
+    border-radius: 5px;
 }
 
 .experience-area {
